--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Static-WebPage-Template</title>
+    <title>Static-WebPage-BoilerPlate</title>
     <!-- FavIcon -->
     <link rel="icon" href="img/favicon.png" type="image/x-icon" />
     <!-- stylesheet Starts here -->
@@ -36,9 +36,13 @@
 
     </header>
     <!-- Header Ends Here -->
+    
     <!-- Main Starts Here -->
     <main>
-      <h1 class="main-heading">Hello!!</h1>
+      <h1 class="main-heading">
+        BoilerPlate!!<br/> You Can code Here!!<br/>
+        All files are in strc. required for basic staic page.
+      </h1>
     </main>
     <!-- Main Ends Here -->
     <!-- End Footer Area -->
@@ -51,8 +55,7 @@
     <!-- Bridge Icon Start -->
     <!-- Js Starts Here -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/mdb.min.js"></script> -->
-    <script src="js/three.min.js"></script>
+    <script src="js/mdb.min.js"></script> 
     <script src="js/wow.min.js"></script>
     <script src="js/tiny-slider.js"></script>
     <script src="js/glightbox.min.js"></script>
